# crewai-workshop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
demos/002_basics_langchain/: run.py
demos/004_basics_configs/: run.py
demos/007_basics_tools/: run.py
demos/008_basics_mcp/: run.py
demos/008_basics_mcp/src/github_issues/: __init__.py  agent.py
demos/009_async_tasks_execution/: run.py
demos/010_conditional_tasks_and_guardrails/src/joke_teller/: crew.py
demos/011_async_tasks_execution/src/joke_teller/: crew.py
demos/014_memory/: run.py
demos/014_memory/src/joke_teller/: crew.py
demos/015_code_execution/: run.py
demos/016_manager_and_planner/src/personal_assistant/: crew.py
shared/: llm.py  tracing.py
